cap-core/tests/ui/forge_cap.stderr
error[E0624]: associated function `fabricate` is private
 --> tests/ui/forge_cap.rs:9:61
  |
9 |     let _via_fabricate: Cap<Frame> = unsafe { Cap::<Frame>::fabricate(RawCap::NULL) };
  |                                                             ^^^^^^^^^ private associated function
  |
 ::: src/cap.rs
  |
  |     pub(crate) unsafe fn fabricate(raw: RawCap) -> Self {
  |     --------------------------------------------------- private associated function defined here
